# movie-broadcast-checker

./: browse.ipynb  data.json  index.html  main.py  nhk_bsp4k_movies.csv  pyproject.toml
.github/workflows/: update.yml
