[project]
name = "movie-broadcast-checker"
version = "0.1.0"
description = "Fetch NHK BSP4K movie schedule and check Japanese streaming availability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.5",
    "pandas>=3.0.1",
    "playwright>=1.40.0",
    "simple-justwatch-python-api>=0.5.0",
]
